--- a/cpu/br36/tools/isd_config.ini
+++ b/cpu/br36/tools/isd_config.ini
@@ -41,7 +41,7 @@ ENTRY = 0x1e00100;
 
 RESERVED_OPT = 0;
 
-DOWNLOAD_MODEL = SERIAL;
+DOWNLOAD_MODEL = USB;
 SERIAL_DEVICE_NAME = JlVirtualJtagSerial;
 SERIAL_BARD_RATE = 1000000;
 SERIAL_CMD_OPT = 10;
