--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "eq_config.h": "c",
         "btstack_event.h": "c",
-        "smart_voice.h": "c"
+        "smart_voice.h": "c",
+        "board_config.h": "c"
     }
 }
