--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,14 @@
         "eq_config.h": "c",
         "btstack_event.h": "c",
         "smart_voice.h": "c",
-        "board_config.h": "c"
+        "board_config.h": "c",
+        "debug.h": "c",
+        "user_cfg.h": "c",
+        "includes.h": "c",
+        "sdmmc.h": "c",
+        "math_fast_function.h": "c",
+        "key_event_deal.h": "c",
+        "p11.h": "c",
+        "tone_player.h": "c"
     }
 }
